--- a/src/main/java/org/cliente/TresEnRayaOffline.form
+++ b/src/main/java/org/cliente/TresEnRayaOffline.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="org.cliente.TresEnRaya">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="org.cliente.TresEnRayaOffline">
   <grid id="27dc6" binding="panel1" default-binding="true" layout-manager="GridLayoutManager" row-count="3" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
@@ -8,7 +8,7 @@
     <properties/>
     <border type="none"/>
     <children>
-      <component id="d2227" class="javax.swing.JButton" binding="button11">
+      <component id="ca2b4" class="javax.swing.JButton" binding="button11">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -16,7 +16,7 @@
           <text value=" "/>
         </properties>
       </component>
-      <component id="9431c" class="javax.swing.JButton" binding="button21">
+      <component id="35898" class="javax.swing.JButton" binding="button21">
         <constraints>
           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -24,23 +24,15 @@
           <text value=" "/>
         </properties>
       </component>
-      <component id="fcedd" class="javax.swing.JButton" binding="button22">
+      <component id="9d9b6" class="javax.swing.JButton" binding="button31">
         <constraints>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value=" "/>
         </properties>
       </component>
-      <component id="ab9e9" class="javax.swing.JButton" binding="button32">
-        <constraints>
-          <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value=" "/>
-        </properties>
-      </component>
-      <component id="e2551" class="javax.swing.JButton" binding="button12">
+      <component id="331bf" class="javax.swing.JButton" binding="button12">
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -48,15 +40,7 @@
           <text value=" "/>
         </properties>
       </component>
-      <component id="cf38d" class="javax.swing.JButton" binding="button13">
-        <constraints>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value=" "/>
-        </properties>
-      </component>
-      <component id="5fd8e" class="javax.swing.JButton" binding="button23">
+      <component id="2283f" class="javax.swing.JButton" binding="button23">
         <constraints>
           <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -64,17 +48,33 @@
           <text value=" "/>
         </properties>
       </component>
-      <component id="3a06b" class="javax.swing.JButton" binding="button33">
+      <component id="d297f" class="javax.swing.JButton" binding="button22">
         <constraints>
-          <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value=" "/>
         </properties>
       </component>
-      <component id="f6953" class="javax.swing.JButton" binding="button31">
+      <component id="4c07f" class="javax.swing.JButton" binding="button32">
         <constraints>
-          <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value=" "/>
+        </properties>
+      </component>
+      <component id="df840" class="javax.swing.JButton" binding="button13">
+        <constraints>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value=" "/>
+        </properties>
+      </component>
+      <component id="8c321" class="javax.swing.JButton" binding="button33">
+        <constraints>
+          <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value=" "/>
